Correcting individual pages and Nav Bar in All.

--- a/Bio.html
+++ b/Bio.html
@@ -32,7 +32,7 @@
         <div style="float: left; height: 0px; line-height: 0px; margin-left: 0px; position: relative; width: 800px; z-index: 10; " id="header_layer">
           <div style="height: 0px; line-height: 0px; " class="bumper"> </div>
         </div>
-        <div style="margin-left: 20px; position: relative; width: 800px; z-index: 5; " id="body_layer">
+        <div style="margin-left: 20px; position: relative; width: 780px; z-index: 5; " id="body_layer">
           <nav class="navbar navbar-expand-lg navbar-light ml-4">
             <a class="navbar-brand" href="index.html">Yash Nandola</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,37 +41,37 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="Bio.html">Bio</a></li>
+                <li class="nav-item active"><a class="nav-link" href="Bio.html">Bio</a></li>
                 <li class="nav-item"><a class="nav-link" href="Publications.html">Publications</a></li>
                 <li class="nav-item"><a class="nav-link" href="Research.html">Research</a></li>
                 <li class="nav-item"><a class="nav-link" href="CourseProjects.html">Course Projects</a></li>
-                <li class="nav-item"><a class="nav-link" href="Coursework.html">Coursewrok</a></li>
+                <li class="nav-item"><a class="nav-link" href="Coursework.html">Coursework</a></li>
                 <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
                 <li class="nav-item"><a class="nav-link" href="Links.html">Links</a></li>
               </ul>
             </div>
           </nav>
           <div style="height: 0px; line-height: 0px; " class="bumper"> </div>          
-          <div id="id1" style="height: 657px; left: 85px; position: absolute; top: 36px; width: 630px; z-index: 1; " class="style_SkipStroke shape-with-text mt-4">
+          <div id="id1" style="height: 657px; left: 85px; position: absolute; top: 36px; width: 650px; z-index: 1; " class="style_SkipStroke shape-with-text mt-4">
             <div class="text-content graphic_textbox_layout_style_default_External_630_657" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
                 <p style="padding-top: 0pt; " class="paragraph_style">Employment<br /></p>
-                <p class="paragraph_style_1">Dec 2022 onwards: Emerging Technologies, Combustion Aerodynamics, General Electric Aerospace.<br /></p>
-                <p class="paragraph_style_1">Jul 2021 to Nov 2022: Associate Engineer, Aerothermal, Airbus Group India Private Limited.<br /></p>
-                <p class="paragraph_style_1">Mar 2018 to May 2019: Faculty of Physics, IIT Ashram.<br /></p>
+                <p class="paragraph_style_1">2022 onwards  &emsp;Emerging Technologies, Combustion Aerodynamics, General Electric Aerospace.<br /></p>
+                <p class="paragraph_style_1">2021 to 2022 &emsp;&nbsp; Associate Engineer, Aerothermal, Airbus Group India Private Limited.<br /></p>
+                <p class="paragraph_style_1">2018 to 2019 &emsp;&nbsp; Faculty of Physics, IIT Ashram.<br /></p>
                 <p class="paragraph_style_1"><br /></p>
                 <p class="paragraph_style">Education<br /></p>
-                <p class="paragraph_style_1">2021 M-Tech Mechanical Engineering, Indian Institute of Science, Bangalore.<br /></p>
-                <p class="paragraph_style_1">2017 B-Tech Mechanical Engineering, Motilal Nehru National Institute of Technology, Allahabad.<br /></p>
+                <p class="paragraph_style_1">2021 &emsp; M-Tech Mechanical Engineering, Indian Institute of Science, Bangalore.<br /></p>
+                <p class="paragraph_style_1">2017 &emsp; B-Tech Mechanical Engineering, Motilal Nehru National Institute of Technology, Allahabad.<br /></p>
                 <p class="paragraph_style_1"><br /></p>
                 <p class="paragraph_style">Awards and Achievements<br /></p>
-                <p class="paragraph_style_1">2021 Ranked amongst top 3, M-Tech, Mechanical Engineering, IISc Bangalore.<br /></p>
-                <p class="paragraph_style_1">2019 Ranked 323/170 thousand candidates (score: 837/1000) GATE-Mechanical Engineering.<br /></p>
-                <p class="paragraph_style_1">2015 Merit Scholarship for Excellence in Academics, MNNIT Allahabad.<br /></p>
-                <p class="paragraph_style_1">2014 Central Sector Scheme of Scholarships for College and University Students, Dept. Higher Education, Govt. of India.<br /></p>
-                <p class="paragraph_style_1">2013 Central Sector Scheme of Scholarships for College and University Students, Dept. Higher Education, Govt. of India.<br /></p>
-                <p class="paragraph_style_1">2013 Secured All India Rank 3697 in JEE Mains and 6837 in JEE Advanced.<br /></p>
-                <p class="paragraph_style_1">2012 Kishore Vaigyanik Protsahan Yojana (KVPY) Fellowship.<br /></p>
+                <p class="paragraph_style_1">2021 &emsp; Ranked amongst top 3, M-Tech, Mechanical Engineering, IISc Bangalore.<br /></p>
+                <p class="paragraph_style_1">2019 &emsp; Ranked 323/170 thousand candidates (score: 837/1000) GATE-Mechanical Engineering.<br /></p>
+                <p class="paragraph_style_1">2015 &emsp; Merit Scholarship for Excellence in Academics, MNNIT Allahabad.<br /></p>
+                <p class="paragraph_style_1">2014 &emsp; Central Sector Scheme of Scholarships for College and University Students, Govt. of India.<br /></p>
+                <p class="paragraph_style_1">2013 &emsp; Central Sector Scheme of Scholarships for College and University Students, Govt. of India.<br /></p>
+                <p class="paragraph_style_1">2013 &emsp; Secured All India Rank 3697 in JEE Mains and 6837 in JEE Advanced.<br /></p>
+                <p class="paragraph_style_1">2012 &emsp; Kishore Vaigyanik Protsahan Yojana (KVPY) Fellowship.<br /></p>
                 <p class="paragraph_style_1"><br /></p>
                 <p class="paragraph_style_1"><br /></p>
                 <p class="paragraph_style_1"><br /></p>
